still dealing with kotlin issues